# RSDKv5-Decompilation

RSDKv5/RSDK/Audio/: Audio.cpp
RSDKv5/RSDK/Audio/Oboe/: OboeAudioDevice.cpp  OboeAudioDevice.hpp
RSDKv5/RSDK/Core/: RetroEngine.cpp
RSDKv5/RSDK/Graphics/: Scene3D.cpp
RSDKv5/RSDK/Graphics/EGL/: EGLRenderDevice.cpp
RSDKv5/RSDK/Scene/: Scene.cpp
RSDKv5/RSDK/Storage/: Storage.cpp
RSDKv5/RSDK/User/Core/: UserCore.cpp
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/rems/rsdkv5/: Launcher.java
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
dependencies/android/: androidHelpers.cpp
